--- a/story-map.yaml
+++ b/story-map.yaml
@@ -23,7 +23,13 @@ Beck Transitions:
   chapter: 9
 
 The Passion of Hyrum, Adam, or Michael:
-- name: Wakes up Demon, Shaves Horns
+- name: Thrown in Chasm
+  chapter: 2
+- name: Castration
+  chapter: 2
+- name: Demon Discovery
+  chapter: 2
+- name: Sets out to 
   chapter: 2
 - name: 
 
