Add Hyrum chapters through 20

--- a/chapters.yaml
+++ b/chapters.yaml
@@ -18,44 +18,69 @@ Chapter 2 - Hyrum:
 
 Chapter 3 - Becky:
   - Reina Healing Miracle
-  - Becky Processes
+  - Witches, Aspen, save the day
   - Becky Breasts Boobily
-  - e = mbc^2
+  - Alice Ca Fucking Pone
 
 Chapter 4 - Hyrum:
   - Hyrum Address - 1287 E Logan Ave (North of 1700 S)
   - Hyrum leaves for Temple
   - Route - follow the chasm
   - Demon Fight
-  - Meet the Mormons
-  - Demon Attack
-  - David Invincible
 
 Chapter 5 - Becky:
-  - Witches, Aspen, save the day
   - Party - Cottonwood Park
-  - Engineers Assemble
-  - Meet witches, Aspen
-  - Quarantine Discovered (broadcast by Utah Army National Guard)
-  - Meet Khazhaq (the demon)
+  - Magic Discovered
 
 Chapter 6 - Hyrum:
-  - Quarantine Discovered (broadcast by Utah Army National Guard)
-  - Fortifications
-  - Hyrum makes friends
-  - Drone to Spy
+  - Processing
+  - Meet the Mormons
 
 Chapter 7 - Becky:
+  - Meet Vivian
+  - Cinderella Moment
+
+Chapter 8 - Hyrum:
+  - Demon "Attack"
+  - Davidic Servant
+
+Chapter 9 - Becky:
+ - Shopping Episode!
+
+Misc:
   - Camp for Demons
   - Engineering Squad Begins Solving Problems
   - Khazhaq and Becky Chemistry
   - Reina/Witches?
 
-Chapter 8 - Hyrum:
-  - Rally the Troops
-  - Shots Fired
-  - Hyrum Captures Demon
+Chapter 10 - Hyrum:
+  - Fortifications
+  - Called as apostle
+  - Told to find a wife
 
+Chapter 11 - Becky:
+  - Finds Legendarium
+  - Sees Gays
+  - Tries experiment
 
-Becky:
-  - 
+Chapter 12 - Hyrum:
+  - Chooses wife - Emma (dead girl's sister)
+  - Endowment & Sealing
+
+Chapter 14 - Hyrum:
+  - Fuck now for Jesus
+  - Second Anointing, Pt 1
+
+Chapter 16 - Hyrum:
+  - Second Anointing Pt 2
+
+Chapter 18 - Hyrum:
+  - Wall finished
+  - Quarantine Announced
+  - Drones sent to spy
+  - Hyrum discovers he killed Emma's family
+
+Chapter 20 - Hyrum:
+  - Attack Planned
+  - Ambush Executed
+  - Cut to black with first shot fired
