--- a/chapters.yaml
+++ b/chapters.yaml
@@ -32,6 +32,10 @@ Chapter 5 - Becky:
   - Party - Cottonwood Park
   - Magic Discovered
 
+Chapter I - Army National Guard:
+  - Mayor is Demon - killed
+  - Quarantine Executed
+
 Chapter 6 - Hyrum:
   - Processing
   - Meet the Mormons
@@ -56,31 +60,64 @@ Misc:
 Chapter 10 - Hyrum:
   - Fortifications
   - Called as apostle
+  - Drones sent to spy
   - Told to find a wife
+
+Chapter II - ?:
+  - ?
 
 Chapter 11 - Becky:
   - Finds Legendarium
   - Sees Gays
-  - Tries experiment
+  - Draxolotl
 
 Chapter 12 - Hyrum:
   - Chooses wife - Emma (dead girl's sister)
   - Endowment & Sealing
 
+Chapter 13 - Becky:
+  - Experiments with Draxolotl
+  - 
+
 Chapter 14 - Hyrum:
   - Fuck now for Jesus
   - Second Anointing, Pt 1
 
+Chapter 15 - Becky:
+
+Chapter III - Aspen:
+  - Discovery of Jordan River Failure
+
 Chapter 16 - Hyrum:
   - Second Anointing Pt 2
 
+Chapter 17 - Becky:
+  - Help Critheann Coven
+
 Chapter 18 - Hyrum:
   - Wall finished
-  - Quarantine Announced
-  - Drones sent to spy
   - Hyrum discovers he killed Emma's family
 
+Chapter 19 - Becky:
+  - Back to Wingate Camp
+
 Chapter 20 - Hyrum:
+  - Horns Regrow
+
+Chapter IV - ?:
+  - 
+
+Chapter 21 - Becky:
+  - Vivian Returns?
+  - Design Plantable Antennae
+
+Chapter 22 - Hyrum:
+  - Declaration of War
+
+Chapter 23 - Becky:
+ - Something?
+  
+Chapter 24 - Hyrum:
   - Attack Planned
   - Ambush Executed
   - Cut to black with first shot fired
