--- a/tongue-crossed-lovers.yaml
+++ b/tongue-crossed-lovers.yaml
@@ -70,7 +70,7 @@ Chapter 23:
   - Practicing
 
 Chapter 24:
-  - Suicide Contraption:
+  - Suicide Plan/Contraption:
     - Discovered
     - Disarmed
 
