--- a/chapters.yaml
+++ b/chapters.yaml
@@ -1,123 +1,195 @@
-Chapter 1 - Beck:
-  - Earthquake
-  - Community Rallies
-  - Reina Leads
-  - Beck Technomancies
-  - Chasm, Bottomless (White Hole)
-  - Beck Breasts Boobily
-  - Squirrel
-  - Grief
+The First Angel - Seismós (σεισμός):
+  Rev 14:
+    - 7: "Fear God, and give glory to him; for the hour of his judgment is come."
 
-Chapter 2 - Hyrum:
-  - Earthquake
-  - Chasm
-  - Climb Out
-  - Castration
-  - Demon Discovery
-  - Plan
+  Prologue - David:
+   - The Four Horsemen
 
-Chapter 3 - Becky:
-  - Reina Healing Miracle
-  - Witches, Aspen, save the day
-  - Becky Breasts Boobily
-  - Alice Ca Fucking Pone
+  Chapter 1 - Beck:
+    - Earthquake
+    - Community Rallies
+    - Reina Leads
+    - Beck Technomancies
+    - Chasm, Bottomless (White Hole)
+    - Beck Breasts Boobily
+    - Squirrel
+    - Grief
 
-Chapter 4 - Hyrum:
-  - Hyrum Address - 1287 E Logan Ave (North of 1700 S)
-  - Hyrum leaves for Temple
-  - Route - follow the chasm
-  - Demon Fight
+  Chapter 2 - Hyrum:
+    - Earthquake
+    - Chasm
+    - Climb Out
+    - Castration
+    - Demon Discovery
+    - Plan
 
-Chapter 5 - Becky:
-  - Party - Cottonwood Park
-  - Magic Discovered
+  Chapter 3 - Becky:
+    - Reina Healing Miracle
+    - Witches, Aspen, save the day
+    - Becky Breasts Boobily
+    - Alice Ca Fucking Pone
 
-Chapter I - The Foundation:
-  - Sterilized Document containing dispatch of special agent Sundown
-  - List persons of interest
+  Chapter 4 - Hyrum:
+    - Hyrum Address - 1287 E Logan Ave (North of 1700 S)
+    - Hyrum leaves for Temple
+    - Route - follow the chasm
+    - Demon Fight
 
-Chapter 6 - Hyrum:
-  - Processing
-  - Meet the Mormons
+  Chapter 5 - Becky:
+    - Party - Cottonwood Park
+    - Magic Discovered
 
-Chapter 7 - Becky:
-  - Meet Vivian
-  - Cinderella Moment
+  Chapter I - The Foundation:
+    - Sterilized Document containing dispatch of Agent Sundown (Alice)
+    - List persons of interest
 
-Chapter 8 - Hyrum:
-  - Demon "Attack"
-  - Davidic Servant
+  Chapter 6 - Hyrum:
+    - Processing
+    - Meet the Mormons
 
-Chapter 9 - Becky:
- - Shopping Episode!
+  Chapter 7 - Becky:
+    - Meet Vivian
+    - Cinderella Moment
 
-Misc:
-  - Camp for Demons
-  - Engineering Squad Begins Solving Problems
-  - Khazhaq and Becky Chemistry
-  - Reina/Witches?
+  Chapter 8 - Hyrum:
+    - Demon "Attack"
+    - Davidic Servant
 
-Chapter 10 - Hyrum:
-  - Fortifications
-  - Called as apostle
-  - Drones sent to spy
-  - Told to find a wife
+  Chapter 9 - Becky:
+  - Shopping Episode!
 
-Chapter II - Army National Guard:
-  - Mayor is Demon - killed
-  - Quarantine Executed
+  Chapter 10 - Hyrum:
+    - Fortifications
+    - Called as apostle
+    - Drones sent to spy
+    - Told to find a wife
 
-Chapter 11 - Becky:
-  - Finds Legendarium
-  - Sees Gays
+  Chapter II - Army National Guard:
+    - Mayor Is Demon - killed
+    - Quarantine Executed
 
-Chapter 12 - Hyrum:
-  - Chooses wife - Emma (dead girl's sister)
-  - Endowment & Sealing
+  Chapter 11 - Becky:
+    - Finds Legendarium
+    - Sees Gays
 
-Chapter 13 - Becky:
-  - Draxolotl
-  - Experiments with Draxolotl
+  Chapter 12 - Hyrum:
+    - Chooses wife - Emma (dead girl's sister)
+    - Endowment & Sealing
 
-Chapter 14 - Hyrum:
-  - Fuck now for Jesus
-  - Second Anointing, Pt 1
+  Chapter 13 - Becky:
+    - Draxolotl
+    - Experiments with Draxolotl
 
-Chapter 15 - Becky:
+  Chapter 14 - Hyrum:
+    - Fuck now for Jesus
+    - Second Anointing, Pt 1
 
-Chapter III - Aspen:
-  - Discovery of Jordan River Failure
+  Chapter 15 - Becky:
+    - (?)
 
-Chapter 16 - Hyrum:
-  - Second Anointing Pt 2
+  Chapter III - Aspen:
+    - Discovery of Jordan River Failure
 
-Chapter 17 - Becky:
-  - Help Critheann Coven
+  Chapter 16 - Hyrum:
+    - Second Anointing Pt 2
 
-Chapter 18 - Hyrum:
-  - Wall finished
-  - Hyrum discovers he killed Emma's family
+  Chapter 17 - Becky:
+    - Help Critheann Coven
 
-Chapter 19 - Becky:
-  - Back to Wingate Camp
+  Chapter 18 - Hyrum:
+    - Wall finished
+    - Hyrum discovers he killed Emma's family
 
-Chapter 20 - Hyrum:
-  - Horns Regrow
+  Chapter 19 - Becky:
+    - Design the Tree Pipe
+    - (?) How?
 
-Chapter IV - ?:
-  - 
+  Chapter 20 - Hyrum:
+    - Horns Regrow
 
-Chapter 21 - Becky:
-  - Vivian Returns?
-  - Design Plantable Antennae
+  Chapter IV - Agent Sundown:
+    - Progress Report to Foundation
 
-Chapter 22 - Hyrum:
-  - Declaration of War
+  Chapter 21 - Becky:
+    - Back to Wingate Camp
 
-Chapter 23 - Becky:
- - Something?
+  Chapter 22 - Hyrum:
+    - Declaration of War
+
+  Chapter 23 - Becky:
+    - Vivian Returns?
+    - Design Plantable Antennae
+
+  Chapter 24 - Hyrum:
+    - Attack Planned
+    - Ambush Executed
+    - Cut to black with first shot fired
+
+  Chapter 25 - Becky:
+    - Sex
+
+The Second Angel - Pólemos (πόλεμος):
+  Rev 14: 
+    - 8: "Fallen! Fallen is Babylon the Great, which made all the nations drink of the wine of the wrath of her fornication."
+
+  Chapter V - Everyone:
+    - Battle of Cottonwood Park
   
-Chapter 24 - Hyrum:
-  - Attack Planned
-  - Ambush Executed
-  - Cut to black with first shot fired
+  Chapter 26 - Hyrum:
+    - Battle
+
+  Chapter 27 - Becky:
+    - Battle
+
+  Chapter 28 - Hyrum:
+    - Subjugate Wingate Village
+
+  Chapter 29 - Becky:
+    - Reactivate 5G Towers
+
+  Chapter 30 - Hyrum:
+    - Catch COVID
+
+  Chapter 31 - Becky:
+    - Plant Radio Towers
+
+  Chapter 32 - Hyrum:
+    - 
+
+  Chapter 33 - Becky:
+    - Attack
+
+  Chapter 34 - Hyrum:
+    - Abandon Camp
+
+  Chapter 35 - Becky:
+    - Asphalt Design
+
+  Chapter 36 - Hyrum:
+    - 
+
+  Chapter 37 - Becky:
+    - Plant Asphalt
+
+  Chapter 38 - Hyrum:
+  Chapter 39 - Becky:
+
+  Chapter 40 - Hyrum:
+  Chapter 41 - Becky:
+  Chapter 42 - Hyrum:
+  Chapter 43 - Becky:
+  Chapter 44 - Hyrum:
+  Chapter 45 - Becky:
+  Chapter 46 - Hyrum:
+  Chapter 47 - Becky:
+  Chapter 48 - Hyrum:
+  Chapter 49 - Becky:
+
+  Chapter 50 - Hyrum:
+
+The Third Angel - Pyr (πῦρ):
+  Rev 14:
+    - 10: "[They] The same shall drink of the wine of the wrath of God, which is poured out without mixture into the cup of his indignation; and he shall be tormented with fire and brimstone in the presence of the holy angels, and in the presence of the Lamb:"
+    - 11: "And the smoke of their torment ascendeth up for ever and ever: and they have no rest day nor night"
+
+Apotheosis:
