--- a/tongue-crossed-lovers.yaml
+++ b/tongue-crossed-lovers.yaml
@@ -50,7 +50,8 @@ Chapter 17:
   - Beau Jumps off Cliff, too low, Breaks Legs
 
 Chapter 18:
-  - Make Up, Kind of
+  - Make Up
+  - Makeup Sex
 
 Chapter 19:
   - Beau Rage
@@ -66,8 +67,8 @@ Chapter 22:
   - Beau Disappears
 
 Chapter 23:
-  - Looking
-  - Practicing
+  - Lalia Seeks Beau
+  - Lalia Practices Puka
 
 Chapter 24:
   - Suicide Plan/Contraption:
