--- a/chapters.yaml
+++ b/chapters.yaml
@@ -4,7 +4,6 @@ The First Angel - Seismós (σεισμός):
 
   Prologue - David:
    - The Four Horsemen
-
   Chapter 1 - Beck:
     - Earthquake
     - Community Rallies
@@ -14,7 +13,6 @@ The First Angel - Seismós (σεισμός):
     - Beck Breasts Boobily
     - Squirrel
     - Grief
-
   Chapter 2 - Hyrum:
     - Earthquake
     - Chasm
@@ -22,19 +20,16 @@ The First Angel - Seismós (σεισμός):
     - Castration
     - Demon Discovery
     - Plan
-
   Chapter 3 - Becky:
     - Reina Healing Miracle
     - Witches, Aspen, save the day
     - Becky Breasts Boobily
     - Alice Ca Fucking Pone
-
   Chapter 4 - Hyrum:
     - Hyrum Address - 1287 E Logan Ave (North of 1700 S)
     - Hyrum leaves for Temple
     - Route - follow the chasm
     - Demon Fight
-
   Chapter 5 - Becky:
     - Party - Cottonwood Park
     - Magic Discovered
@@ -42,22 +37,17 @@ The First Angel - Seismós (σεισμός):
   Chapter I - The Foundation:
     - Sterilized Document containing dispatch of Agent Sundown (Alice)
     - List persons of interest
-
   Chapter 6 - Hyrum:
     - Processing
     - Meet the Mormons
-
   Chapter 7 - Becky:
     - Meet Vivian
     - Cinderella Moment
-
   Chapter 8 - Hyrum:
     - Demon "Attack"
     - Davidic Servant
-
   Chapter 9 - Becky:
   - Shopping Episode!
-
   Chapter 10 - Hyrum:
     - Fortifications
     - Called as apostle
@@ -67,64 +57,49 @@ The First Angel - Seismós (σεισμός):
   Chapter II - Army National Guard:
     - Mayor Is Demon - killed
     - Quarantine Executed
-
   Chapter 11 - Becky:
     - Finds Legendarium
     - Sees Gays
-
   Chapter 12 - Hyrum:
     - Chooses wife - Emma (dead girl's sister)
     - Endowment & Sealing
-
   Chapter 13 - Becky:
     - Draxolotl
     - Experiments with Draxolotl
-
   Chapter 14 - Hyrum:
     - Fuck now for Jesus
     - Second Anointing, Pt 1
-
   Chapter 15 - Becky:
     - (?)
 
   Chapter III - Aspen:
     - Discovery of Jordan River Failure
-
   Chapter 16 - Hyrum:
     - Second Anointing Pt 2
-
   Chapter 17 - Becky:
     - Help Critheann Coven
-
   Chapter 18 - Hyrum:
     - Wall finished
     - Hyrum discovers he killed Emma's family
-
   Chapter 19 - Becky:
     - Design the Tree Pipe
     - (?) How?
-
   Chapter 20 - Hyrum:
     - Horns Regrow
 
   Chapter IV - Agent Sundown:
     - Progress Report to Foundation
-
   Chapter 21 - Becky:
     - Back to Wingate Camp
-
   Chapter 22 - Hyrum:
     - Declaration of War
-
   Chapter 23 - Becky:
     - Vivian Returns?
     - Design Plantable Antennae
-
   Chapter 24 - Hyrum:
     - Attack Planned
     - Ambush Executed
     - Cut to black with first shot fired
-
   Chapter 25 - Becky:
     - Sex
 
@@ -132,64 +107,97 @@ The Second Angel - Pólemos (πόλεμος):
   Rev 14: 
     - 8: "Fallen! Fallen is Babylon the Great, which made all the nations drink of the wine of the wrath of her fornication."
 
-  Chapter V - Everyone:
+  Chapter I - Everyone:
     - Battle of Cottonwood Park
+  Chapter 1 - Becky:
+    - Battle
+  Chapter 2 - Hyrum:
+    - Battle
+  Chapter 3 - Becky:
+    - Plan of Attack
+    - Garments
+  Chapter 4 - Hyrum:
+  Chapter 5 - Becky:
+    - 5G Towers
   
-  Chapter 26 - Hyrum:
-    - Battle
-
-  Chapter 27 - Becky:
-    - Battle
-
-  Chapter 28 - Hyrum:
-    - Subjugate Wingate Village
-
-  Chapter 29 - Becky:
-    - Reactivate 5G Towers
-
-  Chapter 30 - Hyrum:
-    - Catch COVID
-
-  Chapter 31 - Becky:
+  Chapter II - :
+  Chapter 6 - Hyrum:
+  Chapter 7 - Becky:
     - Plant Radio Towers
-
-  Chapter 32 - Hyrum:
-    - 
-
-  Chapter 33 - Becky:
+  Chapter 8 - Hyrum:
+  Chapter 9 - Becky:
     - Attack
-
-  Chapter 34 - Hyrum:
-    - Abandon Camp
-
-  Chapter 35 - Becky:
+  Chapter 10 - Hyrum:
+  
+  Chapter III - :
+  Chapter 11 - Becky:
     - Asphalt Design
-
-  Chapter 36 - Hyrum:
-    - 
-
-  Chapter 37 - Becky:
+  Chapter 12 - Hyrum:
+  Chapter 13 - Becky:
     - Plant Asphalt
+  Chapter 14 - Hyrum:
+  Chapter 15 - Becky:
+  
+  Chapter IV - :
+  Chapter 16 - Hyrum:
+  Chapter 17 - Becky:
+  Chapter 18 - Hyrum:
+  Chapter 19 - Becky:
+  Chapter 20 - Hyrum:
+  
+  Chapter V - :
+  Chapter 21 - Becky:
+  Chapter 22 - Hyrum:
+  Chapter 23 - Becky:
+  Chapter 24 - Hyrum:
 
-  Chapter 38 - Hyrum:
-  Chapter 39 - Becky:
-
-  Chapter 40 - Hyrum:
-  Chapter 41 - Becky:
-  Chapter 42 - Hyrum:
-  Chapter 43 - Becky:
-  Chapter 44 - Hyrum:
-  Chapter 45 - Becky:
-  Chapter 46 - Hyrum:
-  Chapter 47 - Becky:
-  Chapter 48 - Hyrum:
-  Chapter 49 - Becky:
-
-  Chapter 50 - Hyrum:
+  Chapter 25 - Becky:
 
 The Third Angel - Pyr (πῦρ):
   Rev 14:
     - 10: "[They] The same shall drink of the wine of the wrath of God, which is poured out without mixture into the cup of his indignation; and he shall be tormented with fire and brimstone in the presence of the holy angels, and in the presence of the Lamb:"
     - 11: "And the smoke of their torment ascendeth up for ever and ever: and they have no rest day nor night"
 
+  Chapter I - :
+  Chapter 1 - Becky:
+  Chapter 2 - Hyrum:
+  Chapter 3 - Becky:
+  Chapter 4 - Hyrum:
+  Chapter 5 - Becky:
+  
+  Chapter II - :
+  Chapter 6 - Hyrum:
+  Chapter 7 - Becky:
+  Chapter 8 - Hyrum:
+  Chapter 9 - Becky:
+  Chapter 10 - Hyrum:
+  
+  Chapter III - :
+  Chapter 11 - Becky:
+  Chapter 12 - Hyrum:
+  Chapter 13 - Becky:
+  Chapter 14 - Hyrum:
+  Chapter 15 - Becky:
+  
+  Chapter IV - :
+  Chapter 16 - Hyrum:
+  Chapter 17 - Becky:
+  Chapter 18 - Hyrum:
+  Chapter 19 - Becky:
+  Chapter 20 - Hyrum:
+  
+  Chapter V - :
+  Chapter 21 - Becky:
+  Chapter 22 - Hyrum:
+  Chapter 23 - Becky:
+  Chapter 24 - Hyrum:
+  Chapter 25 - Becky:
+
 Apotheosis:
+  - Becky:
+    - Comes Back to Life
+    - Loses Magical Power
+    - Comes Back Boobless (I think so)
+
+  - Hyrum:
+    - Gone
