--- a/chapters.yaml
+++ b/chapters.yaml
@@ -155,7 +155,7 @@ The Second Angel - Pólemos (πόλεμος):
 
 The Third Angel - Pyr (πῦρ):
   Rev 14:
-    - 10: "[They] The same shall drink of the wine of the wrath of God, which is poured out without mixture into the cup of his indignation; and he shall be tormented with fire and brimstone in the presence of the holy angels, and in the presence of the Lamb:"
+    - 10: "[They] shall drink of the wine of the wrath of God, which is poured out without mixture into the cup of his indignation; and he shall be tormented with fire and brimstone in the presence of the holy angels, and in the presence of the Lamb:"
     - 11: "And the smoke of their torment ascendeth up for ever and ever: and they have no rest day nor night"
 
   Chapter I - :
